# ros2_ws

./: .gitignore  frames_2025-11-10_22.22.09.gv  frames_2025-11-10_22.30.25.gv
src/my_robot_sim/: CMakeLists.txt  package.xml  setup.py
src/my_robot_sim/config/: slam.yaml  ukf.yaml
src/my_robot_sim/launch/: box4_oscillator.py  decision_manager.py  diff_drive_urdf_launch.py  dynamic_map_layer.py  dynamic_submap.py  dynamic_visual_tracker.py  path_follower.py  prm_planner.py  rrt_planner.py  tb4_fortress_spawn.launch.py
src/my_robot_sim/ml/: dataset_dyn_cells.npz  eval_dyn_cells.py  generate_dataset.py  model_cnn.py  simulador_2d.py  train_dyn_cells.py
src/my_robot_sim/ml/dyn2d_ia/: dataset_dyn2d.npz  generate_dyn2d_dataset.py  viewer_dyn2d.py
src/my_robot_sim/models/: box4.sdf
src/my_robot_sim/resource/: diff_drive.urdf  diff_drive_urdf.rviz
src/my_robot_sim/worlds/: diff_drive_empty.sdf  maze.sdf
